# OpenFaceCpp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  NativeDLib.cpp  NativeDLib.h  README.md  archCMakeLists.txt  cmake_install.cmake  install.sh  install.sh~  mininstall.sh  openface_server.lua  pythonUsage.txt
Lib/dlib-18.18/: README.txt
Lib/eigenlibsvm/: eigen_extensions.h  svm_utils.h
src/: NativeDLib.cpp  NativeDLib.h  OpenFaceConfig.xml  TorchWrap.cpp  TorchWrap.h  main.cpp  simClassification.cpp
